[package]
name = "AOC2021"
version = "0.1.0"
authors = ["Marian Brändle <marianbraendle@gmx.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# itertools = "0.10.1"
# regex = "1"
# lazy_static = "1.4.0"
# num = "0.4"
# ndarray = "0.15.3"
